[project]
name = "reefpi-addons"
dynamic = ["version"]
authors = [
  { name="Ben Cohen", email="author@example.com" },
]
description = "Automation scripts for a reef pi controller"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "requests",
    "loguru"
]
[project.optional-dependencies]
GPIO = ["RPi.GPIO"]

[project.urls]
Homepage = "https://github.com/bcohen116/reefpi-addons"

[tool.setuptools_scm]  # enables version number dynamically

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.hatch.build.targets.wheel]
packages = ["src/reefpi_addons"]

[project.scripts]
ato_reservoir = "reefpi_addons.ato_reservoir:main"
reefpi_script_handler = "reefpi_addons.script_handler:main"